@@ -75,7 +75,7 @@ extern int output_debug;
 /* Print a debug message.  */
 #define debug(fmt, ...)					\
   ({							\
-    extern char *program_name;				\
+    extern const char program_name[];			\
     if (output_debug)					\
       printf ("%s:%s: " fmt, program_name,		\
 	      __FUNCTION__, ##__VA_ARGS__);		\
